--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;  
+}
 
 #container, h1{
-    font-family: Arial, Helvetica, sans-serif;  
     text-align: center;
 }
 
