--- a/index.css
+++ b/index.css
@@ -2,39 +2,23 @@ body {
     font-family: Arial, Helvetica, sans-serif;  
 }
 
-#container, h1{
-    text-align: center;
-}
 
 .header-image {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
     width: 25%;
     border-radius: 3px;
     border: 1px solid #000;
 }
 
-ul {
-    padding: 0;
-    list-style-type: none;
-}
-
-#workspace {
-    text-align: center;
-}
-
-#footer
-{
+#footer {
     position:fixed;
     bottom:0;
-    font-size: 12px;
     text-align: center;
+    padding: 0 5px;
 }
 
 button {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 20%;
+    width: 100px;
+    height: 50px;
+    vertical-align: top;
 }
