--- a/index.css
+++ b/index.css
@@ -1,11 +1,13 @@
 body {
     font-family: Arial, Helvetica, sans-serif;  
+    text-align: center;
 }
 
 
 .header-image {
     display: block;
-    width: 25%;
+    max-width: 100%;
+    max-height: 300px;
     border-radius: 3px;
     border: 1px solid #000;
 }
@@ -13,7 +15,6 @@ body {
 #footer {
     position:fixed;
     bottom:0;
-    text-align: center;
     padding: 0 5px;
 }
 
@@ -21,4 +22,14 @@ button {
     width: 100px;
     height: 50px;
     vertical-align: top;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+ul {
+    padding: 0;
 }
