--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 body {
     font-family: Arial, Helvetica, sans-serif;  
-    text-align: center;
 }
 
 
@@ -12,16 +11,16 @@ body {
     border: 1px solid #000;
 }
 
+#container, header {
+  display: block;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
 #footer {
     position:fixed;
     bottom:0;
     padding: 0 5px;
-}
-
-button {
-    width: 100px;
-    height: 50px;
-    vertical-align: top;
 }
 
 .center {
@@ -32,4 +31,10 @@ button {
 
 ul {
     padding: 0;
+}
+
+#calcSpace {
+  border: 1px solid #000;
+  padding: 5px;
+  margin-top: 50px;
 }
