--- a/index.css
+++ b/index.css
@@ -33,15 +33,20 @@ ul {
     padding: 0;
 }
 
-#calcSpace {
-  border: 1px solid #000;
+.tools {
+  border: 2px solid #000;
   padding: 15px;
   margin-top: 50px;
 }
 
-#calcResults {
-  padding: 5px;
+input[type=number]:focus {
+  background-color: lightblue;
+}
+
+.results {
+  padding: 20px;
   text-align: center;
+  font-size: 2em;
 }
 
 .dark-mode {
