--- a/index.css
+++ b/index.css
@@ -34,7 +34,8 @@ ul {
 }
 
 .tools {
-  border: 2px solid #000;
+  border: 1px solid #ccc;
+  border-radius:5px;
   padding: 15px;
   margin-top: 50px;
 }
@@ -44,8 +45,6 @@ input[type=number]:focus {
 }
 
 .results {
-  padding: 20px;
-  text-align: center;
   font-size: 2em;
 }
 
